--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,15 @@
 }
 
 .App {
+  display: block;
   box-sizing: border-box;
-  margin: .3rem auto;
+  margin: 5rem auto;
   width: 50rem;
   text-align: center;
   justify-content: center;
 }
+
+
+
+
+
