--- a/src/Login_App/Login/login.css
+++ b/src/Login_App/Login/login.css
@@ -5,7 +5,7 @@
     padding-bottom: .2rem;
     justify-content: center;
     align-items: center;
-    background-color: darkgrey;
+    background-color: lightyellow;
     border-bottom: 1px solid black;
     border-left: 1px solid black;
     border-right: 1px solid black;
